# devops-venv

./: .pre-commit-config.yaml  Pipfile  README.md  makefile  pyproject.toml
