[project]
name = ""
version = "0.0.1"
dependencies = [

  "boto3",

  "ansible                    ==   13.3.0",
  "ansible-lint               ==   26.1.1",
  "ansible-creator            ==  25.12.0",
  "mitogen                    ==   0.3.40",
  "yamllint                   ==   1.38.0",
  "pre-commit                 ==    4.5.1",
  "molecule                   ==  25.12.0",
  "molecule-plugins[ec2]      ==  25.8.12",
  "molecule-plugins[docker]   ==  25.8.12",
  "molecule-plugins[vagrant]  ==  25.8.12",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
